Allow 'count down' from mm:ss not only mm

--- a/CountdownTimer/App.config
+++ b/CountdownTimer/App.config
@@ -41,7 +41,7 @@
                 <value>False</value>
             </setting>
             <setting name="CountFrom" serializeAs="String">
-                <value>5</value>
+                <value>11/30/2017 00:05:00</value>
             </setting>
             <setting name="end_quit" serializeAs="String">
                 <value>True</value>
