Set required default value

--- a/CountdownTimer/App.config
+++ b/CountdownTimer/App.config
@@ -62,7 +62,7 @@
                 <value>Black</value>
             </setting>
             <setting name="BackgroundColour" serializeAs="String">
-                <value />
+                <value>LightGray</value>
             </setting>
             <setting name="BackgroundTransparent" serializeAs="String">
                 <value>True</value>
