--- a/CountdownTimer/Properties/Settings.settings
+++ b/CountdownTimer/Properties/Settings.settings
@@ -54,7 +54,7 @@
       <Value Profile="(Default)">Black</Value>
     </Setting>
     <Setting Name="BackgroundColour" Type="System.Drawing.Color" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">LightGray</Value>
     </Setting>
     <Setting Name="BackgroundTransparent" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
